--- a/src/ru/practicum/dinner/Разбор.md
+++ b/src/ru/practicum/dinner/Разбор.md
@@ -28,5 +28,27 @@
 >     + Метод принимает: `coboNumber` - число вариантов, `ArrayList<String> dishTypes` - список введённых пользователем блюд  
 >     + Так как выводится список из списков метод будет иметь вложенный тип `ArrayList<ArrayList<String>>`   
 >     + Создаём пустой список с типом `ArrayList<ArrayList<String>>`
->     + Создаеv пустой список `combos`. Он будет хранить все комбинации.
->     + дальше с помощью цикла `for` в переменную списка `combo` кладём одну комбинацию блюд - с помощью метода `generateCombo`
+>     + Создаём пустой список `combos`. Он будет хранить все комбинации.
+>     + Дальше с помощью цикла `for` в переменную списка `combo` кладём одну комбинацию блюд - с помощью метода `generateCombo`:
+>     > Приложение 3.
+>     + Передаем из метода список блюд в переменную `combo` типа `ArrayList<String>`.
+>     + И в итоге добавляем этот список в список `combos`.
+## 3. Приложение 3
+> + Метод `generateCombo`:
+>   + Метод принимает так же список введённых типов пользователем.
+>   + Создаётся пустой список `selectedDishes` для хранения комбинации блюд.
+>   + Далее с помощью цикла `for-each` проходимся по списку типов пользователя.
+>   + Создаём список `availableDishes` и заполняем его. Для хранения рандомного блюда из метода `getRandomDish`:
+>   > Приложение 4.
+>   + Записываем в переменную `selectedDish` индекс на блюдо.
+>   + И с добавляем блюдо в список `selectedDishes`.
+## 4. Приложение 4
+> + Метод `getRandomDish`:
+>   + Параметр - наполненный список типов пользователем.
+>   + Объявляем переменную `numberOfDishesForType` для хранения значения - размер
+>   + Объявляем переменную `dishIndex` для хранения числа сгенерированного методом `nextInt` класса `Random`.
+>   + Создаём переменную `selectedDish` и получаем в неё значение по индексу 
+## Приложение 5
+>  + После всех действий при вызове метода `generateCombos`, создаём переменную типа `ArrayList<ArrayList<String>>`: `generatedCombos`
+>  + Далее мы передаём в неё все варианты комбинаций полученные из метода `generateCombos`.
+>  + С помощью цикла `for` выводим по индексу список наборов которые получилось рандомно сгенерировать.
